# GenshinDebug

./: README.md  fiddler.cs  index.js  keys.db  mio.txt  modules.bat  package-lock.json  package.json
MetadataConverter/: .gitignore  CMakeLists.txt
MetadataConverter/crypto/: memecrypto.cpp  memecrypto.h  metadata.cpp  metadata.h  metadatastringdec.cpp  metadatastringdec.h
MetadataConverter/tool/: binarywriter.h  fileutils.cpp  fileutils.h  globalmetadataconverter.cpp  globalmetadataconverter.h  globalmetadataformat.h  main.cpp
genshin/: query_cur_region.js  query_region_list.js
proto/: AISnapshotEntityData.proto  AISnapshotEntitySkillCycle.proto  AISnapshotInfo.proto  AbilityActionBlink.proto  AbilityActionCreateGadget.proto  AbilityActionCreateTile.proto  AbilityActionDestroyTile.proto  AbilityActionFireAfterImgae.proto  AbilityActionGenerateElemBall.proto  AbilityActionServerMonsterLog.proto  AbilityActionSetCrashDamage.proto  AbilityActionSetRandomOverrideMapValue.proto  AbilityActionTriggerAbility.proto  AbilityAppliedAbility.proto  AbilityAppliedModifier.proto  AbilityApplyLevelModifier.proto  AbilityArgument.proto  AbilityAttachedModifier.proto  AbilityBornType.proto  AbilityChangeNotify.proto  AbilityControlBlock.proto  AbilityEmbryo.proto  AbilityFloatValue.proto  AbilityGadgetInfo.proto  AbilityIdentifier.proto  AbilityInvocationFailNotify.proto  AbilityInvocationFixedNotify.proto  AbilityInvocationsNotify.proto  AbilityInvokeArgument.proto  AbilityInvokeEntry.proto  AbilityInvokeEntryHead.proto  AbilityMetaAddOrGetAbilityAndTrigger.proto  (+2119 more)
util/: a.txt  (+4 more)
(+20 files in other folders)
